fix: layout breaks when side menu is bigger than the viewport
affects: @cuba-platform/front-generator

ticket #210

--- a/packages/front-generator/src/generators/react-typescript/app/template/src/app/App.css
+++ b/packages/front-generator/src/generators/react-typescript/app/template/src/app/App.css
@@ -2,6 +2,10 @@
   height: 100%;
 }
 
+.layout-container.ant-layout {
+  min-height: initial;
+}
+
 .layout-sider {
   background: #ffffff;
 }
